<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name" translatable="false">Crouse Pantomime</string>
	<string name="action_settings">Settings</string>
	<string name="action_start">Start</string>
	<string name="action_stop">Stop</string>
	<string name="label_name">Name:</string>
	<string name="label_tempo">Tempo:</string>
	<string name="label_events">Events:</string>

</resources>
