<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:paddingBottom="@dimen/activity_vertical_margin"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin"
			  tools:context=".MainActivity"
	>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnStart"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/action_start"/>

		<Button
			android:id="@+id/btnStop"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/action_stop"/>

	</LinearLayout>

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

			<TextView
				android:id="@+id/txtNameTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_name"/>

			<TextView
				android:id="@+id/txtName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Song name"/>

		</TableRow>

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

			<TextView
				android:id="@+id/txtTempoTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_tempo"/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/txtTempo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="888"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text=" bpm"
					android:id="@+id/txtTempoUnits"/>

			</LinearLayout>

		</TableRow>

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">

			<TextView
				android:id="@+id/txtEventsTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_events"/>

			<TextView
				android:id="@+id/txtEvents"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="1234"/>

		</TableRow>

	</TableLayout>

</LinearLayout>
